@@ -1,11 +1,11 @@
-eid,structural
-0,8.51288E+02
-1,3.28829E+02
-2,4.09643E+02
-3,3.74689E+02
-4,3.42458E+02
-5,2.52500E+02
-6,4.81053E+02
-7,1.98583E+02
-8,5.79551E+02
-9,5.03661E+02
+event_id,rlz_id,structural
+0,0,8.51288E+02
+1,0,3.28829E+02
+2,0,4.09643E+02
+3,0,3.74689E+02
+4,0,3.42458E+02
+5,0,2.52500E+02
+6,0,4.81053E+02
+7,0,1.98583E+02
+8,0,5.79551E+02
+9,0,5.03661E+02
