@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.5.0-gitd83c42cda6', start_date='2019-05-12T07:17:42', checksum=3380558429
-loss_type,unit,mean,stddev
-occupants,people,2.444851E+00,4.032337E-01
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:31', checksum=3380558429
+rlz_id,loss_type,unit,mean,stddev
+0,occupants,people,2.444851E+00,4.032337E-01
